<resources>
    <string name="app_name">Motologo</string>
    <string name="str_tie_username">Correo</string>
    <string name="str_tie_password">Contraseña</string>
    <string name="str_btn_login">INICIAR SECCIÓN</string>
    <string name="str_txv_dontHaveAccount">¿Has olvidado tu contraseña?</string>
    <string name="str_txv_createHere">CREAR CUENTA</string>
    <string name="str_btn_loginc">CREAR CUENTA</string>
    <string name="str_tie_email">Correo electronico</string>
    <string name="str_tie_name">Nombre</string>
    <string name="str_tie_user">Usuario</string>
    <string name="str_tier_password">Contraseña</string>
    <string name="str_tie_confirm_password">Confirmar contraseña</string>
    <string name="str_btn_createaccount">Crear cuenta</string>
</resources>
